# 3D_rendering

./: .gitignore  CMakeLists.txt  PathTracing  README.md
cases/bedroom/: bedroom.mtl  bedroom.xml
cases/cornell-box/: cornell-box.xml
cases/veach-mis/: veach-mis.mtl  veach-mis.xml
release/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: bvh_node.cpp  bvh_node.h  bvh_tree.cpp  bvh_tree.h  camera.cpp  camera.h  light.cpp  light.h  main.cpp  object.cpp  object.h  oct_node.cpp  oct_node.h  picture_io  picture_io.cpp  picture_io.h  renderer.cpp  renderer.h  stb_image_write.h  string_reader.cpp  string_reader.h  tiny_obj_loader.cpp  tiny_obj_loader.h  vector.cpp  vector.h
